--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Commit state if changed
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config user.name "juanfranbustos"
+          git config user.email "juanfranbustosc@gmail.com"
           git add state.json || true
           git diff --cached --quiet || git commit -m "Update state"
           git push
