--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -37,4 +37,10 @@ jobs:
             node checkCharger.js
             sleep 60
           done
-
+          
+      - name: Commit state if changed
+        run: |
+          git config user.name "juanfranbustosc@gmail.com"
+          git add state.json || true
+          git diff --cached --quiet || git commit -m "Update state"
+          git push
